{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 23,
  "lineage": "2b97fbf9-0c40-1dbb-2512-d553c782a2b2",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aba19e56f3eaec05",
            "arn": "arn:aws:ec2:eu-north-1:574921529429:instance/i-0ce22cbfafae66b26",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce22cbfafae66b26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cross-os-automation",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0157161071c264b4f"
              }
            ],
            "primary_network_interface_id": "eni-0157161071c264b4f",
            "private_dns": "ip-10-0-1-150.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "public_ip": "16.192.158.127",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0096adf446ec96fbb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6836a7d91b27473",
            "tags": {
              "Name": "dev-ec2"
            },
            "tags_all": {
              "Name": "dev-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044dad137385a48bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "i-0ce22cbfafae66b26",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:security-group/sg-044dad137385a48bd",
            "description": "Security group for dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044dad137385a48bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "182.189.98.56/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-sg",
            "name_prefix": "",
            "owner_id": "574921529429",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "sg-044dad137385a48bd",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:security-group-rule/sgr-0eac7112701de2ba1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0eac7112701de2ba1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-044dad137385a48bd",
            "security_group_rule_id": "sgr-0eac7112701de2ba1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "sgr-0eac7112701de2ba1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:security-group-rule/sgr-0c3b39828a1414d3b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-0c3b39828a1414d3b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-044dad137385a48bd",
            "security_group_rule_id": "sgr-0c3b39828a1414d3b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "sgr-0c3b39828a1414d3b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:security-group-rule/sgr-0006bd9323e439fa3",
            "cidr_ipv4": "182.189.95.69/32",
            "cidr_ipv6": null,
            "description": "SSH from my IP",
            "from_port": 22,
            "id": "sgr-0006bd9323e439fa3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-044dad137385a48bd",
            "security_group_rule_id": "sgr-0006bd9323e439fa3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "sgr-0006bd9323e439fa3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d55dde1ae3f127a1",
            "arn": "arn:aws:ec2:eu-north-1:574921529429:elastic-ip/eipalloc-0d55dde1ae3f127a1",
            "association_id": "eipassoc-0cc7bfdea4c26045a",
            "domain": "vpc",
            "id": "eipalloc-0d55dde1ae3f127a1",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0fb7c062aa582d848",
            "private_dns": "ip-10-0-1-116.eu-north-1.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-13-62-211-178.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.211.178",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "eipalloc-0d55dde1ae3f127a1",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:internet-gateway/igw-0136d6afc5f238917",
            "id": "igw-0136d6afc5f238917",
            "owner_id": "574921529429",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "igw-0136d6afc5f238917",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d55dde1ae3f127a1",
            "association_id": "eipassoc-0cc7bfdea4c26045a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09a0d5c5e659b7ead",
            "network_interface_id": "eni-0fb7c062aa582d848",
            "private_ip": "10.0.1.116",
            "public_ip": "13.62.211.178",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6836a7d91b27473",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway"
            },
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "nat-09a0d5c5e659b7ead",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:route-table/rtb-0718951667047ffa8",
            "id": "rtb-0718951667047ffa8",
            "owner_id": "574921529429",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a0d5c5e659b7ead",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "rtb-0718951667047ffa8",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:route-table/rtb-0fdf4b454d016f2ac",
            "id": "rtb-0fdf4b454d016f2ac",
            "owner_id": "574921529429",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0136d6afc5f238917",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "rtb-0fdf4b454d016f2ac",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871e686bffe2b020",
            "region": "eu-north-1",
            "route_table_id": "rtb-0718951667047ffa8",
            "subnet_id": "subnet-01ff39ee63727e670"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "rtbassoc-0871e686bffe2b020",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ea92882178ed4ce",
            "region": "eu-north-1",
            "route_table_id": "rtb-0fdf4b454d016f2ac",
            "subnet_id": "subnet-0a6836a7d91b27473"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "rtbassoc-00ea92882178ed4ce",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:subnet/subnet-01ff39ee63727e670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ff39ee63727e670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574921529429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-rt"
            },
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "subnet-01ff39ee63727e670",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:subnet/subnet-0a6836a7d91b27473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6836a7d91b27473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "574921529429",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet"
            },
            "vpc_id": "vpc-04a7ad644d92f3c06"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "subnet-0a6836a7d91b27473",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:574921529429:vpc/vpc-04a7ad644d92f3c06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0087206f27fab7745",
            "default_route_table_id": "rtb-085a4cd035b5ed55b",
            "default_security_group_id": "sg-0b10ba15dca3064e5",
            "dhcp_options_id": "dopt-0b7fcb2b78516b2a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a7ad644d92f3c06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085a4cd035b5ed55b",
            "owner_id": "574921529429",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "574921529429",
            "id": "vpc-04a7ad644d92f3c06",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}